# eshop

./: .gitignore  README.md  coverage.txt  main.py  pyproject.toml
src/: base_product.py  category.py  exceptions.py  lawngrass.py  mixins.py  order.py  product.py  smartphone.py
tests/: conftest.py  test_base_product.py  test_category.py  test_lawngrass.py  test_mixins.py  test_order.py  test_product.py  test_smartphone.py
