[project]
name = "eshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Ivanov",email = "ivanitch.mail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
